<resources>
    <string name="app_name">PruebaLoginReg</string>
    <string name="registro">Registrate es gratis :3</string>
    <string name="nombre">Nombre</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="telefono">Telefono</string>
    <string name="contrasena">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="ingrese_su_id">Ingrese su ID</string>
    <string name="cambie_su_contrasena">Cambie su contraseña</string>
</resources>